fixup schematic framework. Components can be loaded from symbol file dynamically. todo: wire layout. fixme: the component couldn't be deleted by keypress

--- a/opendsim-frontend/resources.qrc
+++ b/opendsim-frontend/resources.qrc
@@ -16,5 +16,6 @@
         <file>bitmaps/modetext.png</file>
         <file>bitmaps/moderect.png</file>
         <file>bitmaps/modeellipse.png</file>
+        <file>bitmaps/greenpen.cur</file>
     </qresource>
 </RCC>
