implemented schematic property mechanism, fixup bugs of transformations and custom style template

--- a/opendsim-frontend/resources.qrc
+++ b/opendsim-frontend/resources.qrc
@@ -23,5 +23,7 @@
         <file>bitmaps/circuitport.png</file>
         <file>bitmaps/rotateleft.png</file>
         <file>bitmaps/rotateright.png</file>
+        <file>bitmaps/xmirror.png</file>
+        <file>bitmaps/ymirror.png</file>
     </qresource>
 </RCC>
