fixup problems of schematic coordinate origin, adding new devices

--- a/opendsim-frontend/resources.qrc
+++ b/opendsim-frontend/resources.qrc
@@ -16,6 +16,7 @@
         <file>bitmaps/modetext.png</file>
         <file>bitmaps/moderect.png</file>
         <file>bitmaps/modeellipse.png</file>
+        <file>bitmaps/modeorigin.png</file>
         <file>bitmaps/greenpen.cur</file>
         <file>bitmaps/whitepen.cur</file>
         <file>bitmaps/circuitnode.png</file>
