new electronic instrument library mechanism was added

--- a/opendsim-frontend/resources.qrc
+++ b/opendsim-frontend/resources.qrc
@@ -17,6 +17,7 @@
         <file>bitmaps/moderect.png</file>
         <file>bitmaps/modeellipse.png</file>
         <file>bitmaps/modeorigin.png</file>
+        <file>bitmaps/modeinst.png</file>
         <file>bitmaps/greenpen.cur</file>
         <file>bitmaps/whitepen.cur</file>
         <file>bitmaps/circuitnode.png</file>
